# bang-jali

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tags.yml
jali/: __init__.py  bot.py  config.py  utils.py
jali/models/: user.py
migrations/: env.py
