[tool.poetry]
name = "bang-jali"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
telethon = "^1.16.4"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
cachetools = "^4.1.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
